--- a/playground/1-team-website/style.css
+++ b/playground/1-team-website/style.css
@@ -6,3 +6,26 @@ th{
     width:150px;
     background-color:yellow;
 }
+
+.button-image{
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+    margin-top:-500px;
+   
+}
+
+#background{
+    
+}
+
+.title-text{
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+    position:absolute;
+    width:100%;
+    margin-top:-600px;
+    color:white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
