--- a/1-team-website/style.css
+++ b/1-team-website/style.css
@@ -75,5 +75,11 @@ th{
 }
 
 a{
-    color:yellow;
+    color:royalblue;
+}
+.logo{
+    margin-top:-500px;
+    margin-right:auto;
+    width:20%;
+    position:absolute;
 }
